--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,17 @@ i {
 
 /* ---------------------------------- */
 /* -------------------------------------------------------------------------------------------- Common css ------------------------------------------------------------------------ */
+.loderComponent {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 40px;
+  height: 40px;
+  transform: translate(0%, 50%);
+  background-color: #15ad91;
+  border: 5px solid rgba(5, 238, 5, 0.315);
+}
+
 .divDesign {
   background-color: rgba(255, 255, 255, 0.849);
   margin: 20px;
