--- a/src/App.css
+++ b/src/App.css
@@ -773,7 +773,32 @@ i {
 
 
 
-
+/* -------------------------------------------------------------------------------------------------------------------------------------- */
+.underDevelopment{
+  background-color: rgb(31, 92, 143);
+  text-align: center;
+  padding: 50px;
+  box-shadow: 2px 5px 20px rgba(182, 11, 197, 0.726);
+  color: white;
+  border-radius: 80px;
+}
+.underDevelopment1{
+  background-color: rgb(31, 143, 78);
+  text-align: center;
+  padding: 50px;
+  box-shadow: 2px 5px 20px rgba(182, 11, 197, 0.726);
+  color: white;
+  border-radius: 80px;
+}
+.underDevelopment2{
+  background-color: rgb(132, 143, 31);
+  text-align: center;
+  padding: 50px;
+  box-shadow: 2px 5px 20px rgba(182, 11, 197, 0.726);
+  color: white;
+  border-radius: 80px;
+}
+/* -------------------------------------------------------------------------------------------------------------------------------------- */
 
 @media (min-width: 768px) {
   .gradient-form {
